Cleanup based on Sonar